[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "thejourneyplanner"
version = "0.2.7"
description = "Plan a quick walk in the car!"
authors = ["W. Fayers <wills@fayers.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "thejourneyplanner", from = "source"}]
homepage = "https://github.com/unkokaeru/thejourneyplanner"
repository = "https://github.com/unkokaeru/thejourneyplanner"
include = ["LICENSE", "source/thejourneyplanner/py.typed", "source/thejourneyplanner/VERSION"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
folium = "^0.12.1"
polyline = "^1.4.0"
requests = "^2.25.1"
rich = "^12.0.0"

[tool.poetry.scripts]
thejourneyplanner = "thejourneyplanner.main:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
tox = "^3.27.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.20.0"
mypy = "^0.970"

[tool.poetry.group.devlint.dependencies]
isort = "^5.13.0"
black = "^22.6.0"
mypy = "^0.970"
Flake8-pyproject = "^1.1.0.post0"
flake8 = "^5.0.0"
pydocstyle = "^6.1.0"
flake8-docstrings = "^1.6.0"

[tool.poetry.group.types.dependencies]
types-PyYAML = "^6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.3.0"

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
gitchangelog = "^3.0.0"
poetry-bumpversion = "^0.3.0"

[tool.poetry.group.dev.dependencies]
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.0"}

[tool.poetry.extras]
test = ["pytest", "tox"]
lint = ["pre-commit", "mypy"]
devlint = ["isort", "black", "mypy", "Flake8-pyproject", "flake8", "pydocstyle", "flake8-docstrings"]
types = ["types-PyYAML"]
docs = ["sphinx"]
release = ["gitchangelog", "poetry-bumpversion"]
dev = ["tox-poetry-installer"]

[tool.poetry_bumpversion.file."source/blankslate/VERSION"]

[tool.isort]
profile = 'black'

[tool.black]
line-length = 100
exclude = '''
/(
    .*        # Excludes all files starting from the root
    | docs    # Excludes the 'docs' directory
)/
'''

[tool.pydocstyle]
match = '(?!test)(?!setup)[^\._].*\.py'
match-dir = '(?!tests)(?!build)(?!docs)[^\.].*'
inherit = false
convention = 'numpy'

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
pretty = true
exclude = '(?x)( ^setup\.py$ | ^__pycache__ | ^build )'

[tool.flake8]
max-line-length = 100
exclude = ['.*', 'docs/', '**/__pycache__', 'setup.py', "**/__init__.py"]
docstring-convention = "numpy"
ignore = ['W503', 'D301', 'D401']

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "UP",
]